--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -120,7 +120,7 @@ code{
 
 small{
 	/* LAYOUT */
-	@include font-size(12);
+	@include font-size(($font-size * 0.7));
 	color: $color-darkgrey;
 }
 
@@ -129,7 +129,7 @@ sup {
 	/* POSITION */
 	position : relative;
 	/* LAYOUT */
-	@include font-size(12);
+	@include font-size(($font-size * 0.7));
 	line-height : 0;
 	//vertical-align :$font-lineheight;
 }
