--- a/scss/base/_elementos.scss
+++ b/scss/base/_elementos.scss
@@ -27,3 +27,40 @@ img{
 .img--circle{
 	border-radius: 100%;
 }
+
+// ********************************
+// imagenes para WordPress 
+// BORRAR SI NO SE UTILIZA WP
+// ********************************
+
+img.alignright {
+    float:right;
+    margin: -70px 0 1em 1em;
+}
+img.alignleft {
+    float:left; 
+    margin:0 1em 1em 0
+}
+img.aligncenter {
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
+    margin-top: 20px; 
+    margin-bottom: 50px;
+}
+a img.alignright {
+    float:right; 
+    margin:-65px 0 1em 1em
+}
+a img.alignleft {
+    float:left;
+    margin:0 1em 1em 0
+}
+a img.aligncenter {
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto
+}
+img#wpstats {
+    display: none;
+}
