Ajuste en los titulos dentro de los archivos para que sean compilados

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+		$RESET
+\*------------------------------------*/
 abbr,
 address,
 article,
@@ -98,6 +101,9 @@ section ol {
   list-style-type: square;
 }
 
+/*------------------------------------*\
+		$TIPOGRAFIA
+\*------------------------------------*/
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   /* BOX MODEL */
@@ -263,6 +269,9 @@ blockquote p {
   display: inline;
 }
 
+/*------------------------------------*\
+		$ELEMENTOS
+\*------------------------------------*/
 hr {
   /* BOX MODEL */
   display: block;
@@ -324,6 +333,9 @@ img#wpstats {
   display: none;
 }
 
+/*------------------------------------*\
+		$LINKS
+\*------------------------------------*/
 a {
   /* LAYOUT */
   text-decoration: none;
