--- a/scss/base/_elementos.scss
+++ b/scss/base/_elementos.scss
@@ -1,6 +1,6 @@
-// ------------------------------
-//		$ELEMENTOS
-//-------------------------------
+/*------------------------------------*\
+		$ELEMENTOS
+\*------------------------------------*/
 
 hr {
 	/* BOX MODEL */
