--- a/scss/base/_links.scss
+++ b/scss/base/_links.scss
@@ -1,6 +1,6 @@
-// ------------------------------
-//		$LINKS
-//-------------------------------
+/*------------------------------------*\
+		$LINKS
+\*------------------------------------*/
 
 a {
 	/* LAYOUT */
