--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,6 +1,6 @@
-// ------------------------------
-//		$RESET
-//-------------------------------
+/*------------------------------------*\
+		$RESET
+\*------------------------------------*/
 
 abbr, 
 address, 
