--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -1,6 +1,6 @@
-//*******************************
-//		$TIPOGRAFIA
-//*******************************
+/*------------------------------------*\
+		$TIPOGRAFIA
+\*------------------------------------*/
 
 
 // ------------------------------
